--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "Παλέτες",
   "start_url": ".",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#f1f5f9",
   "theme_color": "#4f46e5",
   "description": "Μια απλή εφαρμογή για την παρακολούθηση παλετών από προμηθευτές, σχεδιασμένη για κινητά.",
