feat: Update start_url in manifest.json
Changes the `start_url` from `.` to `/index.html` in the `manifest.json` file. This ensures that the application correctly loads the main `index.html` file when launched as a PWA.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Καταγραφέας Παλετών",
   "short_name": "Παλέτες",
-  "start_url": ".",
+  "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#f1f5f9",
